# TCB-3D

./: .gitignore  CMakeLists.txt  README.md
data/: output.off  test.1.edge  test.1.ele  test.1.face  test.1.geo  test.1.node  test.node  test2.1.ele  test2.1.face  test2.1.node  test2.node  test3.1.ele  test3.1.face  test3.1.node  test3.node  test4.1.ele  test4.1.face  test4.1.node  test4.node
src/: macro.h  main.cpp
src/tetrahedralization/: tetio.cpp  tetio.h  tetrahedron.cpp  tetrahedron.h
